# quad_ws

./: .gitignore
src/python_test/: CMakeLists.txt  package.xml
src/python_test/src/: python_test.py
src/quadnake_base/: CMakeLists.txt  package.xml
src/quadnake_base/include/quadnake_base/: quadnake_hardware.h
src/quadnake_base/launch/: quadnake_base.launch  quadnake_stand_alone.launch
src/quadnake_base/src/: quadnake_base_node.cpp  quadnake_hardware.cpp  simple_joy_receiver.cpp
src/quadnake_control/: CMakeLists.txt  package.xml
src/quadnake_control/launch/: teleop.launch
src/quadnake_control/param/: PS4.yaml
src/quadnake_msgs/: CMakeLists.txt  package.xml
src/quadnake_msgs/msg/: Drive.msg  DriveFeed.msg  Feed.msg  LegCommand.msg  LegsDrive.msg  MotorFeed.msg  RemoteDrive.msg
src/test_urdf/launch/: display.launch  gazebo.launch
src/test_urdf/urdf/: test_urdf.SLDASM.urdf  test_urdf.gv  test_urdf.urdf.xacro
src/urdfs/test_urdf/: package.xml
src/urdfs/test_urdf/launch/: display.launch  gazebo.launch
src/urdfs/test_urdf/urdf/: test_urdf.SLDASM.urdf  tutorial.urdf
